# cosmic-layout-applet

./: Cargo.toml  README.md
data/: com.ilya.CosmicAppletRealKeyboardLayout.desktop
scripts/: install-local.sh  uninstall-local.sh
src/: main.rs  x11_xkb.rs
